@@ -1,6 +1,11 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Tue Jul 13 2010 Stefan Manegold <Stefan.Manegold@cwi.nl>
+- Added "sequential_pipe" SQL optimizer pipeline that is (and should be kept!)
+  identical to the default pipeline, except that optimizers mitosis & dataflow
+  are omitted.
+
 * Mon Jul 12 2010 Stefan Manegold <Stefan.Manegold@cwi.nl>
 - Added "no_mitosis_pipe" SQL optimizer pipeline that is (and should be kept!)
   identical to the default pipeline, except that optimizer mitosis is omitted.
